frontend/src/components/navbar.css
html {
    scroll-behavior: smooth;
}

.navbar img {
  position: absolute;
  top: 29.3px;
    left: 100px;
    z-index: 10;
}

.navbar {
  width: 100vw;
  left: 50%;
  transform: translateX(-50%);
  background: linear-gradient(180deg, #000000cd 60%, transparent 90%);
  position: fixed;
  top: 0;       
  margin: 0;    
  padding: 1rem 0; 
  z-index: 9999;
}
nav.navbar ul.nav-links li a {
    color: white !important;
    -webkit-text-fill-color: white !important;
    text-decoration: none !important;
}

.nav-links {
  display: flex;
  align-items: center;
  gap: 5vw;
  flex-wrap: nowrap;
  justify-content: center;
  margin-left: 3vw;
  margin-right: 3vw;
}

.nav-links a {
    letter-spacing: 1px;
    white-space: nowrap;
    color: white;
    text-decoration: none;
    font-size: 15px;
    color: white;
    -webkit-text-fill-color: white;
}


.nav-links a:hover::after {
  width: 100%;
}

.navbar-phone {
  display: none;
  flex-direction: column;
  gap: 5px;
  cursor: pointer;
  width: 25px;
}

.hamburger-bar {
  display: block;
  width: 25px;
  height: 3px;
  background-color: white;
  border-radius: 2px;
  transition: all 0.3s ease;
}

@media (max-width: 768px) {
  .navbar {
    padding: 5% 7%;
  }

  .navbar-phone {
    display: flex;
  }

  .nav-links {
    flex-direction: column;
    position: fixed;
    top: 4%;
    left: 0;
    width: 100%;
    background-color: black;
    text-align: center;
    gap: 0;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.4s ease;
    visibility: hidden;
    opacity: 0;
    transition: max-height 0.4s ease, opacity 0.4s ease, visibility 0.4s ease;
  }

  .nav-links.active {
    max-height: 400px;
    visibility: visible;
    opacity: 1;
  }

  .nav-links li {
    padding: 12px 0;
  }
}

